--- a/MVP-C/HotelsDetailView/HotelsDetailView.storyboard
+++ b/MVP-C/HotelsDetailView/HotelsDetailView.storyboard
@@ -20,35 +20,34 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="831"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellHotel" rowHeight="242" id="bkD-SP-Xm5" customClass="HotelsTableViewCell" customModule="MVP_C" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="242"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellHotel" rowHeight="205" id="bkD-SP-Xm5" customClass="HotelsTableViewCell" customModule="MVP_C" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="205"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bkD-SP-Xm5" id="kM4-4C-d4V">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="242"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="205"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02n-0G-XSF">
-                                                    <rect key="frame" x="181.5" y="187.5" width="51.5" height="24"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LYj-sl-uq7">
-                                                    <rect key="frame" x="105" y="49" width="195" height="125"/>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o1K-0l-Qme">
-                                                    <rect key="frame" x="176.5" y="11" width="61.5" height="21"/>
+                                                    <rect key="frame" x="176.5" y="11" width="61.5" height="29"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02n-0G-XSF">
+                                                    <rect key="frame" x="185" y="174.5" width="44.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LYj-sl-uq7">
+                                                    <rect key="frame" x="105" y="50" width="195" height="111"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="LYj-sl-uq7" firstAttribute="top" secondItem="o1K-0l-Qme" secondAttribute="bottom" constant="17" id="1vB-kK-6F6"/>
-                                                <constraint firstItem="02n-0G-XSF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kM4-4C-d4V" secondAttribute="leading" constant="10" id="4LK-HV-w98"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="02n-0G-XSF" secondAttribute="trailing" constant="10" id="6wg-e0-c85"/>
-                                                <constraint firstAttribute="bottom" secondItem="02n-0G-XSF" secondAttribute="bottom" constant="30.5" id="CXt-2E-BqL"/>
-                                                <constraint firstItem="LYj-sl-uq7" firstAttribute="top" secondItem="kM4-4C-d4V" secondAttribute="top" constant="49" id="MoY-9v-yli"/>
+                                                <constraint firstItem="LYj-sl-uq7" firstAttribute="top" secondItem="o1K-0l-Qme" secondAttribute="bottom" constant="10" id="1vB-kK-6F6"/>
+                                                <constraint firstItem="02n-0G-XSF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kM4-4C-d4V" secondAttribute="leading" id="4LK-HV-w98"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="02n-0G-XSF" secondAttribute="trailing" id="6wg-e0-c85"/>
+                                                <constraint firstAttribute="bottom" secondItem="02n-0G-XSF" secondAttribute="bottom" constant="10" id="CXt-2E-BqL"/>
                                                 <constraint firstAttribute="trailing" secondItem="LYj-sl-uq7" secondAttribute="trailing" constant="114" id="P7D-eu-T1s"/>
                                                 <constraint firstItem="o1K-0l-Qme" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kM4-4C-d4V" secondAttribute="leading" constant="20" id="Ree-jo-GAi"/>
                                                 <constraint firstItem="o1K-0l-Qme" firstAttribute="top" secondItem="kM4-4C-d4V" secondAttribute="top" constant="11" id="ZdS-UI-tbk"/>
@@ -61,8 +60,8 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imageHotels" destination="LYj-sl-uq7" id="pvb-m7-wP2"/>
-                                            <outlet property="lblDescription" destination="o1K-0l-Qme" id="t3a-aV-zoO"/>
-                                            <outlet property="lblTitle" destination="02n-0G-XSF" id="gua-CM-YCL"/>
+                                            <outlet property="lblDescription" destination="02n-0G-XSF" id="4X5-nx-CHg"/>
+                                            <outlet property="lblTitle" destination="o1K-0l-Qme" id="D28-zB-TfS"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
